--- a/forms.html
+++ b/forms.html
@@ -6,7 +6,7 @@
     initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>My Form</title>
+    <title>Photography project</title>
     <style>
         .container{
             background-color: antiquewhite;
@@ -26,12 +26,12 @@
           font-weight: bolder;
         }
         button{
-          font-size:2rem;
+          font-size:1rem;
           font-weight: bold;
           padding:0.5em 1em;
           color:red;
           background-color: rgb(247, 121, 184);
-          border:10px solid red;
+          border:5px solid red;
           border-radius:5px;
           transition-property: all;
           transition-duration: 0.5s;
@@ -56,7 +56,7 @@
     </style>
     <script >
         function fun(){
-          document.getElementById('some').innerHTML="Ee form fill chesina vallu peddha waste fellow.....";
+          alert("You have successfully filled the form")
     
         }
     </script>
